# sas-backend-django

./: .pre-commit-config.yaml  Dockerfile  README.md  gunicorn_config.py  pyproject.toml
.github/workflows/: deploy_ecs.yml
backend/: settings.py  urls.py
sas_backend/: admin.py  apps.py  factories.py  models.py  serializers.py  tests.py  views.py  wsgi.py
sas_backend/migrations/: 0001_initial.py
sas_backend/tests/: test_booking_case.py
